# koyomi

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.yml  db.sh
.sqlx/: query-18d3907c627aa15b5eef8ffef54fe3aa17bb1d5cade90af143a53984d4bfa401.json  query-5cfa03bb742ebcef8fd8650d044c1f649b9660aad9de8de3a1004c13c129295b.json  query-681e96a6abfaaba04e9d84c9c378f78c8e6ea9fcec89652670ca249879553103.json  query-6a2ba689aef6d66dd81504c84eee61b60b4ddbf316a53e74a7dbe8b7ff06f9b8.json  query-88fbac815946bae72d55369a47652927b23b1beae5a5fadb7b44506cf935cf4a.json  query-cc9bfd7e4c21bfe53242b362372c23743c0a9ff72d3c97dc686e2ebefbf56bc8.json
koyomi-api/: Cargo.toml  Dockerfile
koyomi-api/src/: lib.rs  main.rs
koyomi-api/src/routes/: ical.rs  mod.rs
koyomi-api/tests/: ical_tests.rs
koyomi-core/: Cargo.toml
koyomi-core/src/: lib.rs  models.rs
koyomi-scraper/: Cargo.toml  Dockerfile
koyomi-scraper/.sqlx/: query-050e290e26387b6b86b89ca1ba587f0ef1779e1cb76ae958fb6895e8650390a8.json
koyomi-scraper/src/: errors.rs  lib.rs  main.rs  parser.rs  timetable_loop.rs
koyomi-scraper/tests/: parser_test.rs
migrations/: 0_terms.sql  1_lesson.sql  1_lessons.sql  1_subjects.sql  1_timetabled_lessons.sql  2_lessons.sql  2_timetabled_lessons.sql  3_lessons.sql
src/: errors.rs  lib.rs  main.rs  models.rs  parser.rs  prototype.rs  timetable_loop.rs
