[package]
name = "koyomi-api"
version = "0.1.0"
edition = "2021"

[dependencies]
koyomi-core = { path = "../koyomi-core" }
axum = "0.7.7"
dotenvy = "0.15.7"
icalendar = { version = "0.16.9" }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = "0.4.38"
