[package]
name = "koyomi-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
koyomi-core = { path = "../koyomi-core" }
chrono = "0.4.38"
reqwest = "0.12.7"
scraper = "0.20.0"
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio"] }
regex = "1.10.6"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15.7"
